--- a/runner/Cargo.toml
+++ b/runner/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "runner"
 version = "0.1.0"
-authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
+authors = ["Krishnakumar Gopalakrishnan"]
 edition = "2021"
 
 [dependencies]
-rayon = "1.5"
-took = "0.1"
+rayon = "1.6.0"
+took = "0.1.2"
 
 # Days
 day01a = { path = "../day01a" }
